# StudentAdventure

./: CMakeLists.txt  InstallationLog.txt
build_mingw/: CMakeCache.txt  Makefile  Platform_pre.i  cmake_install.cmake
include/: Character.h  Coffee.h  Collectible.h  ECTS.h  Enemy.h  Game.h  GameObject.h  Lecturer.h  Platform.h  Projectile.h  Student.h
src/: Character.cpp  Coffee.cpp  ECTS.cpp  Game.cpp  Lecturer.cpp  Platform.cpp  Student.cpp
